<resources>
    <string name="app_name">SQL_Prac</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="CustomerName">Customer Name</string>
    <string name="customerAge">Age</string>
    <string name="switchActive">ActiveCutomer</string>
    <string name="btnView">View</string>
    <string name="btnAdd">Add</string>
    <string name="Search_Here">Search</string>
    <string name="searchHere">searching...</string>
    <string name="search">SearchName</string>
    <string name="searchButtonTxt">SearchHere</string>
    <string name="nextButton">NextPage</string>
    <string name="BACKBUTTON">MainMenu</string>
</resources>